--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body id="home">
 
     <!--navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #ff6347">
+    <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top" style="background-color: #ff6347" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="img/code-solid.svg" alt="logo" width="50" height="30"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,7 +36,7 @@
               <a class="nav-link active" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#project">My Work</a>
+              <a class="nav-link active" href="#projects">My Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#contact">Contact</a>
@@ -48,10 +48,11 @@
     <!--navbar end-->
 
     <!-- jumbotron -->
-    <section class="jumbotron text-center">
+    <section class="jumbotron text-center" id="welcome-section">
       <img src="img/hiro.jpg" alt="img of hiro" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Mishbakhul Umam</h1>
-      <p class="lead">Front-end Developer</p>
+      <p class="lead">Front-end Web Developer</p>
+      <a href="https://github.com/mishbakhulumam" target="_blank" class="btn btn-dark btn-github" id="profile-link">Follow my Github <i class="fab fa-github"></i></a>
     </section>
     <!-- jumbotron end -->
 
@@ -65,10 +66,10 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis exercitationem consequatur veritatis ut facilis repudiandae commodi amet, repellendus explicabo possimus!</p>
+            <p>Hello I'm Mishbakhul Umam, I'm from Indonesia I have been study in University Of Muhammadiya Gresik 2016-2019 I'm a Front-End Developer for more than 3 years and still love to do</p>
           </div>
           <div class="col-md-4">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias molestiae fugiat veniam ad. Quis illo reiciendis ducimus cupiditate beatae excepturi quidem nihil dicta obcaecati architecto?</p>
+            <p>I really like new things, especially technology and want to learn together I'm very happy if you want to get to know me better, And now I working at Speaking Partner become IT support. see you yourself!!! </p>
           </div>
         </div>
       </div>
@@ -76,7 +77,7 @@
     <!-- About end -->
 
     <!-- Project -->
-    <section id="project">
+    <section id="projects">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
@@ -85,47 +86,49 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500">
-              <img src="img/project/p1.jpg" class="card-img-top" alt="my-work1" />
+            <div class="card" project-tile data-aos="flip-left" data-aos-duration="500">
+              <img src="img/project/tnc2.png" class="card-img-top" alt="my-work1" />
               <div class="card-body">
+                <h5 class="card-title"><strong>Form Login and Register</strong></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <a href="https://mishbakhulumam.github.io/Registration-Login/" target="_blank" class="btn btn-primary">Go to project &raquo;</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="500">
-              <img src="img/project/p2.jpg" class="card-img-top" alt="my-work2" />
+            <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="500">
+              <img src="img/project/tnc.png" class="card-img-top" alt="my-work2" />
               <div class="card-body">
+                <h5 class="card-title"><strong>Technical Documentation Page</strong></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank" class="btn btn-primary">Go to project &raquo;</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="600">
+            <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="600">
               <img src="img/project/p3.jpg" class="card-img-top" alt="my-work3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="btn btn-primary">Go to project &raquo;</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="700">
+            <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="700">
               <img src="img/project/p4.jpg" class="card-img-top" alt="my-work4" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="btn btn-primary">Go to project &raquo;</a>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="800">
+            <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="800">
               <img src="img/project/p5.jpg" class="card-img-top" alt="my-work5" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
+                <a href="#" class="btn btn-primary">Go to project &raquo;</a>
               </div>
             </div>
           </div>
@@ -167,18 +170,18 @@
 
     <!-- Footer -->
     <footer class="background" style="background-color: #ff6347">
-      <p class="text-white fw-bold">Developer By © Mishbakhul Umam. All Rights Reserved</p>
+      <p class="text-white fw-bold">Develop By Mishbakhul Umam. © All Rights Reserved</p>
       <span style="font-size: 2em;">
         <a href="https://github.com/mishbakhulumam" target="_blank"><i class="fab fa-github text-black-50"></i></a>
       </span>
       <span style="font-size: 2em;">
-        <a href="..." target="_blank"><i class="fab fa-instagram-square text-black-50"></i></a>
+        <a href="https://www.instagram.com/mishbakhulumam/" target="_blank"><i class="fab fa-instagram-square text-black-50"></i></a>
       </span>
       <span style="font-size: 2em;">
-        <a href="..." target="_blank"><i class="fab fa-facebook text-black-50"></i></a>
+        <a href="https://www.linkedin.com/in/mishbakhul-umam-946b60228/" target="_blank"><i class="fab fa-linkedin text-black-50"></i></a>
       </span>
       <span style="font-size: 2em;">
-        <a href="..." target="_blank"><i class="fab fa-twitter text-black-50"></i></a>
+        <a href="..." target="_blank"><i class="fab fa-google text-black-50"></i></a>
       </span>
     </footer>
     <!-- Footer end -->
@@ -189,5 +192,7 @@
     </script>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
 </html>
