--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
   
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -16,14 +16,17 @@
     <!-- bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+
     <!-- font style -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;0,700;1,700&family=Poppins:ital,wght@0,300;0,400;0,700;1,700&display=swap" rel="stylesheet">
 
     <title>Portfolio | Mishbakhul Umam</title>
   </head>
   <body id="home">
 
-    <!--navbar-->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm fixed-top" style="background-color: var(--bs-body-bg)" id="navbar">
       <div class="container">
         <a class="navbar-brand" href="#"><img src="img/code-solid.svg" alt="logo" width="50" height="30"></a>
@@ -84,6 +87,19 @@
       <h1 class="display-4">Mishbakhul Umam</h1>
       <p class="lead">Front-end Web Developer</p>
       <a href="https://github.com/mishbakhulumam" target="_blank" class="btn btn-dark btn-github shadow-sm" id="profile-link">Follow my Github <i class="fab fa-github"></i></a>
+
+      <div class="container">
+        <div class="row text-center">
+          <div class="col mt-5">
+            <h3>Favorite Teknologi</h3>
+          </div>
+          <div class="mt-3">
+            <img src="img/tailwind.png" alt="tailwindcss" width="50px">
+            <img src="img/react.png" alt="tailwindcss" width="50px">
+            <img src="img/bootstrap.png" alt="tailwindcss" width="50px">
+          </div>
+        </div>
+      </div>
     </section>
     <!-- jumbotron end -->
 
@@ -112,7 +128,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>Projekku</h2>
+            <h2>Projek</h2>
           </div>
         </div>
         <div class="row">
@@ -121,11 +137,10 @@
               <img src="img/project/tnc2.png" class="card-img-top" alt="my-work1" />
               <div class="card-body">
                 <h5 class="card-title"><a href="https://mishbakhulumam.github.io/Registration-Login/" target="_blank" class=""><strong>Form Login and Register</strong></a></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Sebuah multiple register dan login untuk user dan admin.</p>
                 <div>
                   <img src="img/teknologi/html5-logo.png" alt="html5" width="100" height="40">
                 </div>
-                <!-- <a href="https://mishbakhulumam.github.io/Registration-Login/" target="_blank" class="btn btn-primary">Go to project &raquo;</a> -->
               </div>
             </div>
           </div>
@@ -133,12 +148,11 @@
             <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="500">
               <img src="img/project/tnc.png" class="card-img-top" alt="my-work2" />
               <div class="card-body">
-                <h5 class="card-title"><a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000"><strong>Technical Documentation Page</strong></a></h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title"><a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank"><strong>Technical Documentation Page</strong></a></h5>
+                <p class="card-text">website untuk mendokumentasikan tulisan berdasarkan kategori.</p>
                 <div class="">
                   <img src="img/teknologi/html5-logo.png" alt="html5" width="100" height="40">
                 </div>
-                <!-- <a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank" class="btn btn-primary">Go to project &raquo;</a> -->
               </div>
             </div>
           </div>
@@ -146,12 +160,11 @@
             <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="600">
               <img src="img/project/p3.jpg" class="card-img-top" alt="my-work3" />
               <div class="card-body">
-                <h5 class="card-title"><a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000"><strong>Technical Documentation Page</strong></a></h5>
+                <h5 class="card-title"><a href="#" target="_blank"><strong>Technical Documentation Page</strong></a></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="">
                   <img src="img/teknologi/html5-logo.png" alt="html5" width="100" height="40">
                 </div>
-                <!-- <a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank" class="btn btn-primary">Go to project &raquo;</a> -->
               </div>
             </div>
           </div>
@@ -159,12 +172,11 @@
             <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="700">
               <img src="img/project/p4.jpg" class="card-img-top" alt="my-work4" />
               <div class="card-body">
-                <h5 class="card-title"><a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000"><strong>Technical Documentation Page</strong></a></h5>
+                <h5 class="card-title"><a href="#" target="_blank"><strong>Technical Documentation Page</strong></a></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="">
                   <img src="img/teknologi/html5-logo.png" alt="html5" width="100" height="40">
                 </div>
-                <!-- <a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank" class="btn btn-primary">Go to project &raquo;</a> -->
               </div>
             </div>
           </div>
@@ -172,12 +184,11 @@
             <div class="card project-tile" data-aos="flip-left" data-aos-duration="500" data-aos-delay="800">
               <img src="img/project/p5.jpg" class="card-img-top" alt="my-work5" />
               <div class="card-body">
-                <h5 class="card-title"><a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000"><strong>Technical Documentation Page</strong></a></h5>
+                <h5 class="card-title"><a href="#" target="_blank"><strong>Technical Documentation Page</strong></a></h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <div class="">
                   <img src="img/teknologi/html5-logo.png" alt="html5" width="100" height="40">
                 </div>
-                <!-- <a href="https://codepen.io/mishbakhulumam/pen/WNZmeYa?editors=1000" target="_blank" class="btn btn-primary">Go to project &raquo;</a> -->
               </div>
             </div>
           </div>
@@ -234,10 +245,8 @@
         </span>
       </div>
       <div class="mt-4">
-        <p class="fw-bold">Develop By Mishbakhul Umam. &copy; All Rights Reserved</p>
+        <p class="">Develop By Mishbakhul Umam. &copy; All Rights Reserved</p>
       </div>
-      
-      
     </footer>
     <!-- Footer end -->
 
